code-rs/tui/tests/snapshots/bottom_spacer_clip_regression__bottom_spacer_collapsed_reasoning_120x40.snap
---
source: tui/tests/bottom_spacer_clip_regression.rs
expression: collapsed
---
 |                                                        Code                                                        |
                                                                                                                       

                                                                                                                       


   E

   █
   █
   █

    



 ★   /code - perform a coding task (multiple agents)


 • Hello! How can I help you today?



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 › Share your reasoning and then your final answer.

   Having reasoned through the constraints, the assistant now presents a final answer summarising why the spacer
 • preserves the last visible line.

 | What can I code for you today?                                                                                     |
                                                                                                                       
 Read Only  (Shift+Tab change)                                                                Ctrl+G guide  •  API key
