code-rs/tui/tests/snapshots/bottom_spacer_clip_regression__bottom_spacer_short_wrapped_80x24.snap
---
source: tui/tests/bottom_spacer_clip_regression.rs
expression: output
---
 |                                    Code                                    |

   - Running commands



 › Could you provide a detailed overview of how the anti-clipping spacer
   works?

   Make sure the explanation spans multiple lines so we can exercise wrapping
   in the viewport.

   Absolutely! The spacer is activated whenever the rendered history height
 • lands directly on or near the viewport boundary.

   This explanation intentionally repeats a few phrases so that the text wraps
   even on wider terminals, ensuring we cover the regression scenario where the
   final row historically vanished.

 | What can I code for you today?                                             |

 Read Only  (Shift+Tab change)                        Ctrl+G guide  •  API key
